--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -36,12 +36,10 @@
 		<div class="container-login100">
 			<div class="login100-more" style="background-image: url('../static/src/background.jpg');">
         <div class="box-texte">
-          <h1> Dunia Kato Senegal</h1>
+          <h1> Dunia Kato Sénégal</h1>
           <br>
           <div class="texte">
-            flsdlkl ksjf kjs dklfjs kfjs akfjs kfjas kfjlsj flj lj lkj lj lj .
-jasjf sjf sdkjf slfj lsdfmlm f. fsf fjklsj f.
-sadfsdfasdf  df f f 
+            Nous sommes une èquipe qui partage un seul objectif dont: Etre capable de faire ce que nous aimons et aider les autres à le faire. Toujour sous la libertè et le respect de tous.
           </div>
         </div>
       </div>
