--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>OneSchool &mdash; Website by Colorlib</title>
+    <title>DKS - Ressources</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -45,7 +45,7 @@
       
       <div class="container-fluid">
         <div class="d-flex align-items-center">
-          <div class="site-logo mr-auto w-25"><a href="index.html">Dunia Kato Senegal</a></div>
+          <div class="site-logo mr-auto w-25"><a href="index.html">Dunia Kato Sénégal</a></div>
 
           <div class="mx-auto text-center">
             <nav class="site-navigation position-relative text-right" role="navigation">
@@ -74,7 +74,7 @@
             <div class="col-12 pt-5">
                 <div class="col-lg-12 pt-5  mb-4">
                   <h1  data-aos="fade-up" data-aos-delay="100">Que puis-je faire dans ce centre communautaire?</h1>
-                  <p class="mb-4"  data-aos="fade-up" data-aos-delay="200">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime ipsa nulla sed quis rerum amet natus quas necessitatibus.</p>
+                  <p class="mb-4"  data-aos="fade-up" data-aos-delay="200">Dans ce centre, vous pouvez former et développer vos projets personnels. À cette fin, à partir du centre, vous pouvez utiliser les sources d'informations suivantes sans avoir besoin d'une connexion Internet.</p>
 
                 </div>
               <div class="row align-items-center">
