--- a/templates/index.html
+++ b/templates/index.html
@@ -85,7 +85,9 @@
 				              <p style="color:black;text-align:justify;">
 					Wikipédia est une aencyclopédie universelle, collaborative et multilingu. L'encyclopédie est en libre accès, en lecture comme en écriture. Wikipédia est l'un des sites les plus fréquentés au monde, avec plus de 600 millions de visites quotidiennes. Il constitue le plus grand et le plus populaire des ouvrages de références générales d'Internet, avec un total de 160 millions de pages disponibles. 
 				              </p>
-				              <button class="btn btn-success goto"  onclick="window.location='http://wikipedia.dks/wkoff/'"> allez sur Wikipédia </button>
+					      <form target="_blank" action="http://wikipedia.dks/wkoff/">
+				             	 <button class="btn btn-success"  type="submit"> allez sur Wikipédia </button>
+					  </form>
                       
                   </div>
             
@@ -98,7 +100,10 @@
 
 Outre la création de cours à l'aide d'outils intégrés (ressources et activités) à l'usage des formateurs, Moodle offre des possibilités d'organisation des cours sous forme de filières (catégories et sous-catégories, cohortes…) qui lui donnent également des caractéristiques propres à la mise en place de dispositifs complets d'enseignement. 
                       </p>
-				              <button class="btn btn-success goto"  onclick="window.location='http://moodle.dks/mdl/'"> allez sur Moodle </button>
+					      <form target="_blank" action="http://moodle.dks/mdl/">
+		      
+				              <button class="btn btn-success " type="submit" > allez sur Moodle </button>
+					      </form>
                       
                   </div>
             
@@ -110,7 +115,9 @@ Outre la création de cours à l'aide d'outils intégrés (ressources et activit
 				              Khan Academy est une association à but non lucratif fondée en 2008 par Salman Khan. Sur le principe de « fournir un enseignement de grande qualité à tous, partout », le site web publie en ligne un ensemble gratuit de plus de 2.200 mini-leçons, via des tutoriels vidéo stockés sur YouTube, abordant les mathématiques, l'informatique, l'histoire, la finance, la physique, la chimie, la biologie, l'astronomie, la musique, l'art pictural et l'économie. 
 
                       </p>
-				              <button class="btn btn-success goto"  onclick="window.location'http://khanacademy.dks/kacademy/'"> allez sur KhanAcademy </button>
+					      <form target="_blank" action="http://khanacademy.dks/kacademy/">
+				              <button class="btn btn-success"  type="submit"> allez sur KhanAcademy </button>
+					      </form>
                       
                   </div>
             
