--- a/templates/index.html
+++ b/templates/index.html
@@ -100,7 +100,7 @@
 
 Outre la création de cours à l'aide d'outils intégrés (ressources et activités) à l'usage des formateurs, Moodle offre des possibilités d'organisation des cours sous forme de filières (catégories et sous-catégories, cohortes…) qui lui donnent également des caractéristiques propres à la mise en place de dispositifs complets d'enseignement. 
                       </p>
-					      <form target="_blank" action="http://moodle.dks/mdl/">
+					      <form target="_blank" action="http://moodle.dks:8081/">
 		      
 				              <button class="btn btn-success " type="submit" > allez sur Moodle </button>
 					      </form>
@@ -116,7 +116,7 @@ Outre la création de cours à l'aide d'outils intégrés (ressources et activit
 
                       </p>
 					      <form target="_blank" action="http://khanacademy.dks/kacademy/">
-				              <button class="btn btn-success"  type="submit"> allez sur KhanAcademy </button>
+				              <button class="btn btn-success"  type="submit" disabled> allez sur KhanAcademy </button>
 					      </form>
                       
                   </div>
