--- a/templates/index.html
+++ b/templates/index.html
@@ -116,7 +116,7 @@ Outre la création de cours à l'aide d'outils intégrés (ressources et activit
 
                       </p>
 					      <form target="_blank" action="http://khanacademy.dks/kacademy/">
-				              <button class="btn btn-success"  type="submit" disabled> allez sur KhanAcademy </button>
+				              <button class="btn btn-success"  type="submit" data-toggle="tooltip" data-placement="top" title="Bientôt disponible" disabled> allez sur KhanAcademy </button>
 					      </form>
                       
                   </div>
