--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -30,7 +30,7 @@
 	<link rel="stylesheet" type="text/css" href="{% static 'login/css/main.css' %}">
 <!--===============================================================================================-->
 </head>
-<body style="background-color: grey;">
+<body style="background-color: #403d3d;">
 	
 	<div class="limiter">
 		<div class="container-login100">
