--- a/templates/login.html
+++ b/templates/login.html
@@ -45,7 +45,7 @@
       </div>
 
 			<div class="wrap-login100 p-l-50 p-r-50 p-t-72 p-b-50">
-				<form class="login100-form validate-form" action"login" method="post"> {% csrf_token %}  
+				<form class="login100-form validate-form" action"http://duniakato.dks/login" method="post"> {% csrf_token %}  
 					<span class="login100-form-title p-b-59">
 						Accéder au réseau:
 					</span>
