--- a/templates/index.html
+++ b/templates/index.html
@@ -7,23 +7,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
     
-<!--<link href="https://fonts.googleapis.com/css?family=Muli:300,400,700,900" rel="stylesheet">-->
-    <link rel="stylesheet" href="fonts/icomoon/style.css">
+    <!--<link href="https://fonts.googleapis.com/css?family=Muli:300,400,700,900" rel="stylesheet">-->
+    <!--    <link rel="stylesheet" href="fonts/icomoon/style.css"> -->
 
+
+    <!--    <link rel="stylesheet" href="{% static 'resources/css/jquery-ui.css' %}"> -->
+    <!--    <link rel="stylesheet" href="{% static 'resources/css/owl.carousel.min.css' %}"> -->
+    <!--    <link rel="stylesheet" href="{% static 'resources/css/owl.theme.default.min.css' %}"> -->
+    <!--    <link rel="stylesheet" href="{% static 'resources/css/owl.theme.default.min.css' %}"> -->
+    <!--    <link rel="stylesheet" href="{% static 'resources/css/bootstrap-datepicker.css' %}"> -->
+    <!--    <link rel="stylesheet" href="{% static 'resources/fonts/flaticon/font/flaticon.css' %}"> -->
+
+    <link rel="stylesheet" href="{% static 'resources/css/jquery.fancybox.min.css' %}"> 
     <link rel="stylesheet" href="{% static 'resources/css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'resources/css/jquery-ui.css' %}">
-    <link rel="stylesheet" href="{% static 'resources/css/owl.carousel.min.css' %}">
-    <link rel="stylesheet" href="{% static 'resources/css/owl.theme.default.min.css' %}">
-    <link rel="stylesheet" href="{% static 'resources/css/owl.theme.default.min.css' %}">
-
-    <link rel="stylesheet" href="{% static 'resources/css/jquery.fancybox.min.css' %}">
-
-    <link rel="stylesheet" href="{% static 'resources/css/bootstrap-datepicker.css' %}">
-
-    <link rel="stylesheet" href="{% static 'resources/fonts/flaticon/font/flaticon.css' %}">
-
     <link rel="stylesheet" href="{% static 'resources/css/aos.css' %}">
-
     <link rel="stylesheet" href="{% static 'resources/css/style.css' %}">
     
   </head>
@@ -153,16 +150,16 @@ Outre la création de cours à l'aide d'outils intégrés (ressources et activit
 
   <script src="{% static 'resources/js/jquery-3.3.1.min.js' %}"></script>
   <script src="{% static 'resources/js/jquery-migrate-3.0.1.min.js' %}"></script>
-  <script src="{% static 'resources/js/jquery-ui.js' %}"></script>
-  <script src="{% static 'resources/js/popper.min.js' %}"></script>
-  <script src="{% static 'resources/js/bootstrap.min.js' %}"></script>
+  <!--  <script src="{% static 'resources/js/jquery-ui.js' %}"></script> -->
+  <!--  <script src="{% static 'resources/js/popper.min.js' %}"></script> -->
+  <!--  <script src="{% static 'login/vendor/bootstrap/js/bootstrap.min.js' %}"></script> -->
   <script src="{% static 'resources/js/owl.carousel.min.js' %}"></script>
   <script src="{% static 'resources/js/jquery.stellar.min.js' %}"></script>
   <script src="{% static 'resources/js/jquery.countdown.min.js' %}"></script>
-  <script src="{% static 'resources/js/bootstrap-datepicker.min.js' %}"></script>
-  <script src="{% static 'resources/js/jquery.easing.1.3.js' %}"></script>
+  <!--  <script src="{% static 'resources/js/bootstrap-datepicker.min.js' %}"></script> -->
+  <!--  <script src="{% static 'resources/js/jquery.easing.1.3.js' %}"></script> -->
   <script src="{% static 'resources/js/aos.js' %}"></script>
-  <script src="{% static 'resources/js/jquery.fancybox.min.js' %}"></script>
+  <!--  <script src="{% static 'resources/js/jquery.fancybox.min.js' %}"></script> -->
   <script src="{% static 'resources/js/jquery.sticky.js' %}"></script>
 
   
