Fix staff login procedure

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -52,7 +52,7 @@
           <div class="ml-auto w-25">
             <nav class="site-navigation position-relative text-right" role="navigation">
               <ul class="site-menu main-menu site-menu-dark js-clone-nav mr-auto d-none d-lg-block m-0 p-0">
-                <li class="cta"><button class="btn btn-success goto"  onclick="window.location.href='/user/login'"> Log in </button>
+                <li class="cta"><button class="btn btn-success goto"  onclick="window.location.href='/statistics'"> personnelle </button>
 </li>
 				                            </ul>
             </nav>
